<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/student_navigation"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.htetarkarlinn.itvisionhub.Fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_class"
        android:name="com.htetarkarlinn.itvisionhub.Fragment.ClassFragment"
        android:label="@string/class_l"
        tools:layout="@layout/fragment_class" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.htetarkarlinn.itvisionhub.Fragment.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>