<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    >

    <ImageView
        android:id="@+id/login_cover"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:src="@drawable/cover" />
    <androidx.cardview.widget.CardView
        android:layout_below="@+id/login_cover"
        app:cardElevation="10dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="-14dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:background="@drawable/login_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/amethysta"
            android:shadowColor="#FF9800"
            android:shadowDx="2"
            android:shadowRadius="10"
            android:text="Login here"
            android:textColor="@color/white"
            android:textFontWeight="5"
            android:textSize="30sp" />


        <androidx.cardview.widget.CardView
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/login_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input"
            android:padding="10dp"
            android:background="@null"
            android:textSize="14sp"
           />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password"
                android:padding="10dp"
                android:inputType="textPassword"
                android:background="@null"
                android:textSize="14sp"
                />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/loginbtn_bg"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_marginRight="40dp"
            >


            <TextView
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textColor="@color/white"
                android:padding="6dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:gravity="center"
                android:fontFamily="@font/amethysta"
                android:textAllCaps="false"/>
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:visibility="gone"
                android:indeterminateTint="@color/white"/>


        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/amethysta"
            android:shadowColor="#FF9800"
            android:shadowDx="2"
            android:shadowRadius="10"
            android:text="Register here"
            android:textColor="@color/white"
            android:textFontWeight="5"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signup_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text=""
                android:textAllCaps="false"
                android:textSize="18sp"
                android:visibility="gone"
                android:textColor="@color/white"
                android:autoLink="all" />

            <TextView
                android:id="@+id/signup_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_student"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:autoLink="all"/>
        </LinearLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>