<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ProfileFragment"
    app:layout_anchorGravity="bottom">

    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        android:id="@+id/pp_card"
        app:cardElevation="2dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/login_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/person"
            app:civ_border_color="@color/colorPrimaryVariant"
            app:civ_border_width="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.117" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="228dp"
            android:layout_height="162dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/amethysta"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="#FDFCFC"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:fontFamily="@font/amethysta"
            android:gravity="center_vertical"
            android:shadowColor="@color/white"
            android:shadowRadius="3"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView"
            app:layout_constraintVertical_bias="0.118" />

        <TextView
            android:id="@+id/user_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:fontFamily="@font/amethysta"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="446dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pp_card"
        app:layout_constraintVertical_bias="0.0"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            app:cardElevation="2dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/phone_ic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="@color/colorPrimary"
                android:gravity="center_vertical"
                android:text="@string/phone_number"
                android:paddingLeft="20dp"
                />

        </LinearLayout>
        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingLeft="55dp"
            android:gravity="center_vertical"

            />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            app:cardElevation="2dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="5dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_email" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center_vertical"
                        android:text="@string/email"
                        android:paddingLeft="20dp"
                        />

                </LinearLayout>
                <TextView
                    android:id="@+id/p_email"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:paddingLeft="55dp"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/degree"
            app:cardElevation="2dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="5dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_degree" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/degree"
                        android:paddingLeft="20dp"
                        />

                </LinearLayout>
                <TextView
                    android:id="@+id/p_university"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="55dp"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
        app:cardElevation="2dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:paddingLeft="5dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/sign_out"
                    android:paddingLeft="20dp"
                    />

            </LinearLayout>

    </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
